--- a/Object-Orentation/LibreriaOnlineJava/src/main/resources/com/example/libreriaonlinejava/hello-view.fxml
+++ b/Object-Orentation/LibreriaOnlineJava/src/main/resources/com/example/libreriaonlinejava/hello-view.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <BorderPane layoutX="7.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
          <left>
@@ -45,4 +44,4 @@
          </right>
       </BorderPane>
    </children>
-</AnchorPane>
+</fx:root>
