--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/welcome.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/welcome.fxml
@@ -12,13 +12,13 @@
 <?import javafx.scene.text.Text?>
 
 
-<fx:root fillHeight="false" maxHeight="500.0" maxWidth="500.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0" prefWidth="500.0" type="HBox" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.welcomeController">
+<HBox fillHeight="false" maxHeight="500.0" maxWidth="500.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane maxHeight="500.0" maxWidth="200.0" minHeight="500.0" minWidth="200.0" prefHeight="500.0" prefWidth="200.0" style="-fx-border-color: brown;">
          <children>
             <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="22.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../photo/biblioteca.png" />
+
                </image>
             </ImageView>
          </children></AnchorPane>
@@ -35,23 +35,23 @@
                </font>
             </Text>
             <ButtonBar layoutX="39.0" layoutY="241.0" prefHeight="40.0" prefWidth="200.0" />
-            <Button id="ButtonLoginIn" layoutX="92.0" layoutY="267.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="183.0" style="-fx-background-color: white;" text="Log In">
+            <Button layoutX="92.0" layoutY="267.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="183.0" style="-fx-background-color: grey;" text="Log In">
                <font>
                   <Font name="Arial" size="15.0" />
                </font>
             </Button>
-            <TextField id="TextUsername" layoutX="149.0" layoutY="131.0" promptText="Username" />
+            <TextField layoutX="149.0" layoutY="131.0" promptText="Username" />
             <Text layoutX="32.0" layoutY="341.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Non sei un Utente ?">
                <font>
                   <Font name="Arial" size="20.0" />
                </font>
             </Text>
-            <Button id="ButtonSignUp" layoutX="224.0" layoutY="321.0" mnemonicParsing="false" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Sign Up" textFill="#0800f8" underline="true">
+            <Button layoutX="224.0" layoutY="321.0" mnemonicParsing="false" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Sign Up" textFill="#0800f8" underline="true">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <PasswordField id="TextPassword" layoutX="149.0" layoutY="173.0" />
+            <PasswordField layoutX="149.0" layoutY="173.0" promptText="Password" />
          </children></AnchorPane>
    </children>
-</fx:root>
+</HBox>
