--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/welcome.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/welcome.fxml
@@ -34,23 +34,23 @@
                </font>
             </Text>
             <ButtonBar layoutX="39.0" layoutY="241.0" prefHeight="40.0" prefWidth="200.0" />
-            <Button defaultButton="true" layoutX="92.0" layoutY="267.0" mnemonicParsing="false" onAction="#LoginUtente" prefHeight="25.0" prefWidth="183.0" style="-fx-background-color: grey;" text="Log In">
+            <Button fx:id="ButtonLoginIn" defaultButton="true" layoutX="92.0" layoutY="267.0" mnemonicParsing="false" onAction="#LoginUtente" prefHeight="25.0" prefWidth="183.0" style="-fx-background-color: grey;" text="Log In">
                <font>
                   <Font name="Arial" size="15.0" />
                </font>
             </Button>
-            <TextField id="txtUsername" fx:id="txtUsernameField" layoutX="149.0" layoutY="131.0" promptText="Username" />
+            <TextField id="txtUsername" fx:id="txtEmailField" layoutX="149.0" layoutY="131.0" promptText="Email" />
             <Text layoutX="32.0" layoutY="341.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Non sei un Utente ?">
                <font>
                   <Font name="Arial" size="20.0" />
                </font>
             </Text>
-            <Button layoutX="224.0" layoutY="321.0" mnemonicParsing="false" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Sign Up" textFill="#0800f8" underline="true">
+            <Button fx:id="ButtonSingUp" layoutX="224.0" layoutY="321.0" mnemonicParsing="false" onAction="#SingUpUtente" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Sign Up" textFill="#0800f8" underline="true">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <PasswordField layoutX="149.0" layoutY="173.0" promptText="Password" />
+            <PasswordField fx:id="txtPasswordField" layoutX="149.0" layoutY="173.0" promptText="Password" />
          </children></AnchorPane>
    </children>
 </HBox>
