qualcsoa e andato a puttane

--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/errorStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/errorStage.fxml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Text?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.errorStageController">
+<AnchorPane maxHeight="100.0" maxWidth="100.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.errorStageController">
    <children>
-      <Button layoutX="90.0" layoutY="312.0" minWidth="100.0" mnemonicParsing="false"  text="Back" AnchorPane.leftAnchor="100.0" />
-      <Button layoutX="309.0" layoutY="312.0" minWidth="100.0" mnemonicParsing="false"  prefHeight="25.0" prefWidth="67.0" text="Register" AnchorPane.rightAnchor="100.0"  />
-      <Text layoutX="100.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" AnchorPane.leftAnchor="100.0" />
-      <Text layoutX="115.0" layoutY="199.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" AnchorPane.leftAnchor="100.0" />
-      <TextField fx:id="txtSignUpEmailField" layoutX="260.0" layoutY="113.0" promptText="Email" AnchorPane.rightAnchor="100.0" />
-      <PasswordField fx:id="txtSignUpPasswordField" layoutX="260.0" layoutY="182.0" promptText="Password" AnchorPane.rightAnchor="100.0" />
+      <Button layoutX="125.0" layoutY="61.0" minWidth="100.0" mnemonicParsing="false" onAction="#okButton" text="Ok" AnchorPane.leftAnchor="125.0" />
+      <Text fx:id="textError" layoutX="14.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Messaggio" textOrigin="CENTER" />
    </children>
 </AnchorPane>
