--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/primapagina.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/primapagina.fxml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="900.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Primapagina">
    <children>
-      <ComboBox editable="true" layoutX="26.0" layoutY="262.0" prefWidth="150.0" promptText="Seleziona Filtri" style="-fx-background-color: black;" />
-      <DatePicker layoutX="14.0" layoutY="14.0" />
-      <Label layoutX="745.0" layoutY="18.0" prefHeight="18.0" prefWidth="94.0" text="Email utente" />
+      <Hyperlink layoutX="687.0" layoutY="10.0" prefHeight="23.0" prefWidth="212.0" text="Email utente" AnchorPane.topAnchor="10.0" />
+      <Button layoutX="832.0" layoutY="861.0" mnemonicParsing="false" text="Log off" />
+      <AnchorPane layoutX="100.0" layoutY="167.0" prefHeight="646.0" prefWidth="735.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0">
+         <children>
+            <ComboBox editable="true" layoutX="275.0" layoutY="48.0" prefWidth="150.0" promptText="Seleziona Filtri" style="-fx-background-color: black;" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
