--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/infoUserStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/infoUserStage.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="500" prefWidth="500" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.InfoUserController">
+<AnchorPane prefHeight="500" prefWidth="500" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.InfoUserController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="47.0" prefWidth="293.0" text="Informazioni Utente">
          <font>
@@ -20,14 +16,12 @@
             <Font size="15.0" />
          </font>
       </Label>
-      <Label fx:id="labelEmail" layoutX="81.0" layoutY="82.0" prefWidth="74.0" text="emailUser" />
+      <Label fx:id="labelEmail" layoutX="81.0" layoutY="82.0" prefHeight="17.0" prefWidth="255.0" text="emailUser" />
       <Label layoutX="64.0" layoutY="99.0" prefHeight="21.0" prefWidth="183.0" text="Vuoi cambiare Password ?">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <TextField fx:id="txtOldPassword" layoutX="81.0" layoutY="120.0" />
-      <TextField fx:id="txtNewPassword" layoutX="232.0" layoutY="120.0" />
       <Button layoutX="382.0" layoutY="120.0" mnemonicParsing="false" onAction="#changePassword" text="Cambia" />
       <Label layoutX="64.0" layoutY="145.0" prefHeight="17.0" prefWidth="107.0" text="Preferiti Utente">
          <font>
@@ -35,6 +29,14 @@
          </font>
       </Label>
       <ListView fx:id="listViewSerie" editable="true" layoutX="71.0" layoutY="166.0" prefHeight="200.0" prefWidth="357.0" />
-      <Button fx:id="buttonBack" layoutX="64.0" layoutY="423.0" mnemonicParsing="false" onAction="#back_goToWelcome" text="Back" />
+      <Button fx:id="buttonBack" layoutX="64.0" layoutY="423.0" mnemonicParsing="false" onAction="#back_goToHome" text="Back" />
+      <PasswordField fx:id="txtOldPassword" layoutX="81.0" layoutY="120.0" promptText="Vecchia Password" />
+      <PasswordField fx:id="txtNewPassword" layoutX="232.0" layoutY="120.0" promptText="NuovaPassword" />
+      <Label layoutX="63.0" layoutY="366.0" text="Per eliminare dai tuoi preferiti una serie selezionala e dopo clicca il bottone &quot;Elimina&quot;">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Label>
+      <Button layoutX="224.0" layoutY="381.0" mnemonicParsing="false" onAction="#eliminaPreferito" text="Elimina" />
    </children>
 </AnchorPane>
