--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/home.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/home.fxml
@@ -15,7 +15,6 @@
       <Button layoutX="832.0" layoutY="861.0" mnemonicParsing="false" text="Log off" />
       <Hyperlink layoutX="14.0" layoutY="10.0" prefHeight="23.0" prefWidth="212.0" text="Notifica" />
       <TextField fx:id="idBarSearch" layoutX="298.0" layoutY="130.0" />
-      <ComboBox fx:id="idComboBox" editable="true" layoutX="450.0" layoutY="130.0" prefWidth="150.0" promptText="Seleziona Filtri" style="-fx-background-color: black;" />
       <DialogPane layoutX="93.0" layoutY="177.0" prefHeight="654.0" prefWidth="700.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
       <Button defaultButton="true" layoutX="687.0" layoutY="34.0" mnemonicParsing="false" onAction="#goToInfoUser" style="-fx-background-color: trasperent; -fx-cursor: hand;" text="Info Utente" textFill="#0800f8" underline="true">
          <font>
@@ -24,5 +23,6 @@
       </Button>
       <ListView fx:id="listViewLibri" layoutX="120.0" layoutY="204.0" prefHeight="669.0" prefWidth="700.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
       <Button layoutX="424.0" layoutY="861.0" mnemonicParsing="false" onAction="#Select" text="Cerca" />
+      <ComboBox fx:id="idComboBox" layoutX="450.0" layoutY="130.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
