--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/home.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/home.fxml
@@ -22,7 +22,8 @@
          </font>
       </Button>
       <ListView fx:id="listViewLibri" layoutX="120.0" layoutY="204.0" prefHeight="669.0" prefWidth="700.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
-      <Button layoutX="424.0" layoutY="861.0" mnemonicParsing="false" onAction="#Select" text="Cerca" />
+      <Button layoutX="373.0" layoutY="861.0" mnemonicParsing="false" onAction="#Select" text="Cerca" />
       <ComboBox fx:id="idComboBox" layoutX="450.0" layoutY="130.0" prefWidth="150.0" />
+      <Button fx:id="buttonMostra" disable="true" layoutX="502.0" layoutY="861.0" mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Mostra" />
    </children>
 </AnchorPane>
