--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/notificheStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/notificheStage.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.bibliotecadigitale.Controller.NotificheController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="900.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.NotificheController">
+   <children>
+      <ListView fx:id="listViewSerieAcquisto" layoutX="120.0" layoutY="265.0" prefHeight="563.0" prefWidth="659.0">
+         <contextMenu>
+            <ContextMenu>
+              <items>
+                <MenuItem mnemonicParsing="false" text="Vedi info Serie" />
+                  <MenuItem mnemonicParsing="false" text="Vedi info acqusito" />
+                  <MenuItem fx:id="prova1" mnemonicParsing="false" onAction="#home" text="Vai ad acquisto" />
+                  <MenuItem mnemonicParsing="false" text="Elimina la serie dai preferiti" />
+              </items>
+            </ContextMenu>
+         </contextMenu></ListView>
+      <Button layoutX="67.0" layoutY="843.0" mnemonicParsing="false" onAction="#goToHome" text="Back" />
+      <Button layoutX="223.0" layoutY="53.0" mnemonicParsing="false" text="Button" />
+   </children>
 </AnchorPane>
